# OPRA-Convolution

./: .gitignore  ARTIFACTS_LICENSE.md  NOTICE_OPRA.md  README.md  pyproject.toml
.github/workflows/: ci.yml  opra-presets.yml
src/fir_dsp/: __init__.py  analysis_ext.py  analyze.py  api.py  artifact_metrics.py  benchmark_analyze.py  cli.py  core.py  core_validation.py  eq_to_magnitude_native.py  logging_utils.py  models.py  opra_cli.py  opra_selector.py  preamp.py  profiles.py  report.py  system_validation.py  target_validation.py  txt_to_wav.py  types.py  validation.py  visualize.py
tests/: conftest.py  test_api_cli_and_limits.py  test_benchmark_analyze.py  test_eq_to_magnitude_native.py  test_fir_analyzer.py  test_fir_analyzer_advanced.py  test_fir_correctness.py  test_opra_cli_artifacts.py  test_opra_selector.py  test_phase_modes.py  test_preamp_contract.py  test_target_validation.py  test_txt_to_wav.py  test_validation_and_determinism.py  test_visualize_contract.py
